Added ISR routines ang REST service.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,9 @@
     "terminal.integrated.env.linux": {
         "PATH": "/home/stash/.platformio/penv/bin:/home/stash/.platformio/penv:/home/stash/.local/bin:/home/stash/bin:/home/stash/.nvm/versions/node/v10.0.0/bin:/usr/local/bin:/usr/bin:/bin:/usr/local/games:/usr/games",
         "PLATFORMIO_CALLER": "vscode"
+    },
+    "terminal.integrated.env.osx": {
+        "PATH": "/Users/stanislaws/.platformio/penv/bin:/Users/stanislaws/.platformio/penv:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:/opt/X11/bin",
+        "PLATFORMIO_CALLER": "vscode"
     }
 }
