--- a/platformio.ini
+++ b/platformio.ini
@@ -15,8 +15,9 @@ framework = arduino
 
 lib_deps =
   # Using a library name
-  LiquidCrystal@>=1.5.0
-  
+  WiFiManager
+  aREST
+
 [env:otap]
 platform = espressif8266
 board = nodemcu
@@ -26,5 +27,5 @@ upload_port = 192.168.30.144
 
 
 lib_deps =
-  # Using a library name
-  LiquidCrystal@>=1.5.0
+  WiFiManager
+  aREST
