Meter works nice with ir-sensors now

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,20 +12,22 @@
 platform = espressif8266
 board = nodemcu
 framework = arduino
-
+build_flags = -D PIO_FRAMEWORK_ARDUINO_LWIP2_LOW_MEMORY
+upload_port =  /dev/cu.wchusbserial1410
 lib_deps =
   # Using a library name
   WiFiManager
-  aREST
+  #aREST
+  Homie
 
 [env:otap]
 platform = espressif8266
 board = nodemcu
 framework = arduino
+build_flags = -D PIO_FRAMEWORK_ARDUINO_LWIP2_LOW_MEMORY
 upload_protocol = espota
+#upload_port = 192.168.30.229
 upload_port = 192.168.30.144
-
-
 lib_deps =
   WiFiManager
-  aREST
+  Homie
